# Discord-Gaming-Automation-Hub

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
alembic/: env.py
alembic/versions/: 618dcdadc091_initial_schema.py
credentials/: README.md
n8n/: README.md
n8n/workflows/: README.md  calendar-reminders.json  calendar-sync.json
scripts/: bootstrap.sh  dev-entry.sh  lint.sh  setup-hooks.sh  test.sh
src/gaming_hub/: __init__.py  __main__.py  bootstrap.py
src/gaming_hub/api/: __init__.py  app.py
src/gaming_hub/api/routers/: README.md  health.py  webhooks.py
src/gaming_hub/automation/: README.md  __init__.py  scheduler.py  webhooks.py
src/gaming_hub/calendar/: __init__.py  adapter.py  events.py
src/gaming_hub/config/: __init__.py  loader.py  models.py
src/gaming_hub/core/: __init__.py  constants.py  enums.py  exceptions.py  interfaces.py
src/gaming_hub/data/: __init__.py
src/gaming_hub/data/cache/: README.md  __init__.py  decorator.py  in_memory.py  key.py  sqlite_stub.py
src/gaming_hub/data/database/: README.md  __init__.py  base.py  connection.py
src/gaming_hub/data/database/models/: __init__.py  automation_log.py  base.py  deal.py  game.py  sale.py  user.py
src/gaming_hub/data/providers/: __init__.py  base.py  cheapshark.py  epic.py  isthereanydeal.py  rawg.py  registry.py  steam.py
src/gaming_hub/data/repositories/: calendar_repo.py
src/gaming_hub/discord_bot/: README.md  __init__.py  __main__.py  bot.py  container.py
src/gaming_hub/discord_bot/cogs/: __init__.py
src/gaming_hub/discord_bot/cogs/commands/: __init__.py  discount_cog.py  free_cog.py  help_cog.py  new_cog.py  search_cog.py  surprise_cog.py  top_cog.py
src/gaming_hub/discord_bot/commands/: __init__.py  base.py
src/gaming_hub/discord_bot/events/: __init__.py  base.py
src/gaming_hub/discord_bot/posters/: __init__.py  base.py  coming_soon.py  crazy_discounts.py  factory.py  free_this_week.py  major_updates.py  top_this_week.py
src/gaming_hub/discord_bot/scheduler/: __init__.py  channel_scheduler.py  force_refresh.py
src/gaming_hub/discord_bot/ui/: README.md  __init__.py  embeds.py  views.py
src/gaming_hub/discord_bot/utils/: embed_builder.py  pagination.py
src/gaming_hub/models/: __init__.py  calendar_event.py
src/gaming_hub/models/domain/: __init__.py  deal.py  game.py  sale.py  user.py
src/gaming_hub/models/dto/: __init__.py  provider.py  request.py
src/gaming_hub/services/: __init__.py  base.py  calendar_service.py  discount_service.py  free_games.py  free_games_service.py  history.py  major_updates_service.py  new_releases.py  new_releases_service.py  recommendation.py  search.py  search_service.py  surprise.py  surprise_service.py  top_games_service.py
src/gaming_hub/utils/: __init__.py  http.py  logging.py  validators.py
tests/: conftest.py
tests/fixtures/: README.md  __init__.py
tests/fixtures/cheapshark/: deals.json  games_search.json
tests/fixtures/epic/: catalog_item.json  catalog_search.json  free_games_current.json  free_games_upcoming.json  graphql_search.json
tests/fixtures/isthereanydeal/: deal_list.json  game_info.json  lowest_price.json  search_results.json
tests/fixtures/steam/: appdetails_1091500.json  appdetails_730.json  appdetails_html_error.html  appdetails_not_found.json  trending_page.html
tests/integration/: __init__.py
tests/integration/data/database/: test_database.py
tests/integration/data/providers/: test_base_provider.py  test_cheapshark.py  test_epic.py  test_isthereanydeal.py  test_steam_community.py
tests/integration/services/: test_discount_service.py  test_free_games_service.py  test_search_service.py  test_top_games_service.py
tests/integration/utils/: test_http.py
tests/unit/: __init__.py
tests/unit/automation/: test_scheduler.py  test_webhooks.py
tests/unit/calendar/: test_adapter.py  test_service.py
tests/unit/config/: test_settings.py
tests/unit/core/: test_enums.py  test_exceptions.py  test_health.py
tests/unit/data/cache/: test_decorator.py  test_in_memory.py  test_key.py
tests/unit/data/providers/: test_base_provider.py  test_cheapshark.py  test_epic.py  test_isthereanydeal.py  test_registry.py  test_steam_community.py
tests/unit/discord_bot/: test_bot.py
tests/unit/discord_bot/cogs/commands/: conftest.py  test_discount_cog.py  test_free_cog.py  test_help_cog.py  test_new_cog.py  test_search_cog.py  test_surprise_cog.py  test_top_cog.py
tests/unit/discord_bot/posters/: test_base.py  test_coming_soon.py  test_crazy_discounts.py  test_free_this_week.py  test_major_updates.py  test_registry.py  test_top_this_week.py
tests/unit/discord_bot/scheduler/: test_channel_scheduler.py
tests/unit/models/domain/: test_deal.py  test_game.py  test_sale.py  test_user.py
tests/unit/models/dto/: test_provider.py  test_request.py
tests/unit/services/: test_calendar_service.py  test_discount_service.py  test_free_games_service.py  test_history.py  test_new_releases_service.py  test_search_service.py  test_surprise_service.py  test_top_games_service.py
tests/unit/utils/: test_http.py  test_logging.py
